--- a/index.html
+++ b/index.html
@@ -3,26 +3,262 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
+    <link rel="icon" type="image/png" href="pclogo.JPG">
+    <title>PC Hotels Chatbot</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
+        @keyframes backgroundAnimation {
+            0% { background-image: url('backgroundimages/image1.jpg'); }
+            33% { background-image: url('backgroundimages/image2.jpg'); }
+            66% { background-image: url('backgroundimages/image3.jpg'); }
+            100% { background-image: url('backgroundimages/image1.jpg'); }
+        }
         #messages {
-            border: 1px solid #ccc;
+            flex: 1;
+            overflow-y: auto;
+            border: 1px solid #ddd;
             padding: 10px;
-            height: 300px;
-            overflow-y: scroll;
+            background-color: #f9f9f9;
+            border-radius: 4px;
             margin-bottom: 10px;
         }
-        .loading {
-            font-style: italic;
-            color: gray;
+
+        #messages div {
+            font-family: Arial, sans-serif;
+            line-height: 1.5;
+            font-size: 16px;
+            margin-bottom: 10px;
+            color: #333;
         }
+
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #140C3C;
+        }
+
+        #header {
+            display: flex; /* Cambia a flex para alinear el logo y el título horizontalmente */
+            align-items: center; /* Alinea verticalmente en el centro */
+            justify-content: center; /* Centra horizontalmente */
+            color: #ECCE70; 
+            padding: 10px;
+        }
+
+        #header img {
+            max-width: 120px;
+            margin-right: 10px; /* Espacio entre el logo y el título */
+        }
+
+        #title {
+            font-size: 40px;
+            font-weight: bold;
+            font-family: 'Merriweather', serif; 
+            color: #ECCE70; /* Mantén el color dorado */
+        }
+
+        #main-section {
+            background-size: cover;
+            background-position: center;
+            animation: backgroundAnimation 15s infinite;
+            padding: 20px;
+            display: flex;
+            justify-content: center; /* Centra horizontalmente el contenedor */
+            align-items: center; /* Centra verticalmente */
+            flex-direction: column;
+            min-height: calc(100vh - 150px); /* Altura total menos header y footer */
+            box-sizing: border-box;
+        }
+
+        #container {
+            display: flex;
+            justify-content: center; /* Centra las cajas horizontalmente */
+            gap: 20px; /* Espacio entre las cajas */
+            width: 100%;
+            max-width: 1200px; /* Ancho máximo del contenedor */
+        }
+
+        /* Contenedor del chatbot */
+        #chat-container {
+            width: 48%;
+            height: 700px;
+            padding: 10px;
+            background: linear-gradient(to bottom, #140C3C, #f0f8ff); /* Degradado igual que antes */
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+        }
+
+        #messages {
+            flex: 1;
+            overflow-y: auto;
+            border: 1px solid #ddd;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+
+        #user-input {
+            width: calc(100% - 20px);
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+
+        #send-btn {
+            padding: 10px;
+            font-size: 16px;
+            border: none;
+            border-radius: 4px;
+            background-color: #140C3C;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #send-btn:hover {
+            background-color: #40376d;
+        }
+
+        /* Contenedor de reglas */
+        #info-container {
+            width: 48%;
+            height: 700px;
+            padding: 10px;
+            background: linear-gradient(to bottom, #140C3C, #f0f8ff); /* Degradado igual que antes */
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #rules {
+            width: 95%;
+            height: 95%;
+            text-align: left;
+            font-size: 20px;
+            color: #333;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 8px;
+            padding: 15px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            line-height: 3.5
+        }
+
+        #rules h3 {
+            font-size: 35px;
+            text-align: center;
+            margin-bottom: 10px;
+            color: #140C3C;
+            font-weight: bold; 
+        }
+
+        #rules ul {
+            padding-left: 20px;
+            list-style-type: disc;
+            line-height: 1.5;
+        }
+        #rules li {
+        margin-bottom: 30px; /* Espacio entre las reglas (interlineado 3) */
+    }
+
+        #footer {
+            text-align: center;
+            background-color: #140C3C;
+            color: #ECCE70;
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        @media (max-width: 800px) {
+            #container {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            #chat-container,
+            #info-container {
+                width: 90%;
+                margin-bottom: 20px;
+            }
+        }
+        /* Estilo para el menú desplegable */
+        select#day-dropdown {
+        width: 200px; /* Ancho reducido */
+        padding: 8px; /* Padding más pequeño */
+        font-size: 14px; /* Texto más pequeño */
+        color: #ffffff; /* Texto en dorado */
+        background-color: #30275D; /* Degradado oscuro */
+        border: 1px solid #30275D; /* Borde dorado */
+        border-radius: 6px; /* Esquinas redondeadas */
+        margin: 10px 0; /* Separación */
+        transition: all 0.3s ease; /* Transición suave */
+        cursor: pointer;
+    }
+
+    select#day-dropdown:hover {
+        background: linear-gradient(to bottom, #1D164A, #30275D); /* Cambio de degradado al pasar el mouse */
+        color: #ffffff; /* Texto más brillante en hover */
+    }
+
+    /* Opciones dentro del menú */
+    select#day-dropdown option {
+        font-size: 14px;
+        padding: 5px;
+        color: #000000; /* Texto en dorado */
+        background-color: #ffffff; /* Fondo oscuro */
+    }
+
+    select#day-dropdown option:hover {
+        background-color: #ffffff; /* Fondo más claro al pasar el mouse */
+    }
     </style>
 </head>
 <body>
-    <div id="messages"></div>
-    <input type="text" id="user-input" placeholder="Escribe un mensaje...">
-    <button id="send-btn">Enviar</button>
+    <!-- Header -->
+    <div id="header">
+        <img src="pclogo.JPG" alt="Logo" style="max-width: 180px; margin-right: 10px;">
+        <div id="title">PC HOTELS CHATBOT</div>
+    </div>
 
+    <!-- Main Section -->
+    <div id="main-section">
+        <div id="container">
+            <!-- Chat Container -->
+            <div id="chat-container">
+                <div id="messages"></div>
+                <input type="text" id="user-input" placeholder="Ask me something" />
+                <button id="send-btn">Send</button>
+            </div>
+
+            <!-- Info Container -->
+            <div id="info-container">
+                <div id="rules">
+                    <h3>Chatbot Usage Guidelines</h3>
+                    <ul>
+                        <li>Please ask clear and concise questions.</li>
+                        <li>Do not share personal or sensitive information.</li>
+                        <li>Remember that the bot is here to help, but it may not have answers to all questions.</li>
+                        <li>If you find an error, please report it to improve our service.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div id="footer">
+        Autor de la página: Paula de Dios Oliver | Propiedad: PC Hoteles
+    </div>
     <script>
         const messagesDiv = document.getElementById('messages');
         const userInput = document.getElementById('user-input');
@@ -40,7 +276,7 @@
             if (message) {
                 appendMessage('Tú', message);
                 userInput.value = ''; // Limpiar el campo de entrada
-                appendMessage('Bot', '<span class="loading">Cargando...</span>'); // Indicador de carga
+                appendMessage('Bot', '<span class="loading">Loading...</span>'); // Indicador de carga
                 sendMessageToRasa(message);
             }
         }
@@ -57,7 +293,7 @@
                 const response = await fetch('http://localhost:5005/webhooks/rest/webhook', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ "sender": "user_19", "message": message })
+                    body: JSON.stringify({ "sender": "beaa2222ises1s", "message": message })
                 });
 
                 if (!response.ok) {
@@ -92,7 +328,7 @@
             };
 
             const defaultOption = document.createElement('option');
-            defaultOption.text = 'Selecciona un día';
+            defaultOption.text = 'Select an option';
             defaultOption.value = '';
             dropdown.appendChild(defaultOption);
 
@@ -107,5 +343,7 @@
             messagesDiv.scrollTop = messagesDiv.scrollHeight; // Desplazar hacia abajo
         }
     </script>
+</body>
+</html>
 </body>
 </html>
