--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <body>
     <!-- Header -->
     <div id="header">
-        <img src="pclogo.JPG" alt="Logo" style="max-width: 180px; margin-right: 10px;">
+        <img src="pclogo1.JPG" alt="Logo" style="max-width: 180px; margin-right: 10px;">
         <div id="title">PC HOTELS CHATBOT</div>
     </div>
 
